added the api for threshold related validation
