# src/ExamPortal.API.Models/Query.cs
@@ -1,0 +1,140 @@
+/*
+ * Exam Portal API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ * Generated by: https://openapi-generator.tech
+ */
+
+using System;
+using System.Linq;
+using System.Text;
+using System.Collections.Generic;
+using System.ComponentModel;
+using System.ComponentModel.DataAnnotations;
+using System.Runtime.Serialization;
+using Newtonsoft.Json;
+using ExamPortal.API.Converters;
+
+namespace ExamPortal.API.Models
+{ 
+    /// <summary>
+    /// 
+    /// </summary>
+    [DataContract]
+    public partial class Query : IEquatable<Query>
+    {
+        /// <summary>
+        /// Gets or Sets VariableName
+        /// </summary>
+        /* <example>Q1_count, Q1_sum</example> */
+        [Required]
+        [DataMember(Name="variable_name", EmitDefaultValue=false)]
+        public string VariableName { get; set; }
+
+        /// <summary>
+        /// Gets or Sets PseudoQuery
+        /// </summary>
+        /* <example>QUERY COUNT({amount}), SUM({amount})
+FROM DATA
+PAST 30 day FROM 7 day before transaction date
+WHERE #{amount} &gt;&#x3D; {5000}</example> */
+        [Required]
+        [DataMember(Name="pseudo_query", EmitDefaultValue=false)]
+        public string PseudoQuery { get; set; }
+
+        /// <summary>
+        /// Returns the string presentation of the object
+        /// </summary>
+        /// <returns>String presentation of the object</returns>
+        public override string ToString()
+        {
+            var sb = new StringBuilder();
+            sb.Append("class Query {\n");
+            sb.Append("  VariableName: ").Append(VariableName).Append("\n");
+            sb.Append("  PseudoQuery: ").Append(PseudoQuery).Append("\n");
+            sb.Append("}\n");
+            return sb.ToString();
+        }
+
+        /// <summary>
+        /// Returns the JSON string presentation of the object
+        /// </summary>
+        /// <returns>JSON string presentation of the object</returns>
+        public string ToJson()
+        {
+            return JsonConvert.SerializeObject(this, Formatting.Indented);
+        }
+
+        /// <summary>
+        /// Returns true if objects are equal
+        /// </summary>
+        /// <param name="obj">Object to be compared</param>
+        /// <returns>Boolean</returns>
+        public override bool Equals(object obj)
+        {
+            if (obj is null) return false;
+            if (ReferenceEquals(this, obj)) return true;
+            return obj.GetType() == GetType() && Equals((Query)obj);
+        }
+
+        /// <summary>
+        /// Returns true if Query instances are equal
+        /// </summary>
+        /// <param name="other">Instance of Query to be compared</param>
+        /// <returns>Boolean</returns>
+        public bool Equals(Query other)
+        {
+            if (other is null) return false;
+            if (ReferenceEquals(this, other)) return true;
+
+            return 
+                (
+                    VariableName == other.VariableName ||
+                    VariableName != null &&
+                    VariableName.Equals(other.VariableName)
+                ) && 
+                (
+                    PseudoQuery == other.PseudoQuery ||
+                    PseudoQuery != null &&
+                    PseudoQuery.Equals(other.PseudoQuery)
+                );
+        }
+
+        /// <summary>
+        /// Gets the hash code
+        /// </summary>
+        /// <returns>Hash code</returns>
+        public override int GetHashCode()
+        {
+            unchecked // Overflow is fine, just wrap
+            {
+                var hashCode = 41;
+                // Suitable nullity checks etc, of course :)
+                    if (VariableName != null)
+                    hashCode = hashCode * 59 + VariableName.GetHashCode();
+                    if (PseudoQuery != null)
+                    hashCode = hashCode * 59 + PseudoQuery.GetHashCode();
+                return hashCode;
+            }
+        }
+
+        #region Operators
+        #pragma warning disable 1591
+
+        public static bool operator ==(Query left, Query right)
+        {
+            return Equals(left, right);
+        }
+
+        public static bool operator !=(Query left, Query right)
+        {
+            return !Equals(left, right);
+        }
+
+        #pragma warning restore 1591
+        #endregion Operators
+    }
+}
